* Work around Mobile WebKit bug in {bz: 4717} by restricting inadvertent   wrapping inside sub-nav tabs.

--- a/nlw/share/skin/s3/css/miki.css
+++ b/nlw/share/skin/s3/css/miki.css
@@ -304,3 +304,30 @@ li.divider {
 .ui-mobile-viewport .ui-li-count {
     display: inline;
 }
+
+/* Work around Mobile WebKit bug: {bz: 4717} */
+
+.ui-btn-active .ui-btn-inner {
+    border: 0px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    background: transparent;
+}
+
+.ui-btn-active .ui-btn-text {
+    border: 0px;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    display: inline-block;
+    background: transparent;
+}
+
+.ui-btn-active .ui-btn-up-c {
+    background: transparent;
+    height: 0px;
+    border: 0px;
+}
+
+.ui-btn-inner {
+    max-height: 1em;
+}
